--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   <body>
     <header class="header-section">
       <div class="container direction">
-        <nav class="direction">
+        <nav class="direction mobile-header">
           <a href="./index.html" class="logo">
             <span class="logo-a">Web<span class="logo-b">Studio</span></span>
           </a>
-          <ul class="list direction">
+          <ul class="list header-list">
             <li class="link-direction">
               <a href="./index.html" class="link link-nav current">Studio</a>
             </li>
@@ -44,9 +44,14 @@
               <a href="" class="link link-nav">Contacts</a>
             </li>
           </ul>
+          <button type="button" class="mobile-button-menu js-open-menu">
+            <svg class="menu-hamburger" width="32" height="32px">
+              <use href="./images/icons.svg#burger"></use>
+            </svg>
+          </button>
         </nav>
-        <address class="address-direction">
-          <ul class="list direction">
+        <address class="address-tablet-box">
+          <ul class="list address-direction">
             <li class="link-direction">
               <a href="mailto:info@devstudio.com" class="link"
                 >info@devstudio.com</a
@@ -57,6 +62,68 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="mobile-menu js-menu-container">
+        <ul class="mobile-menu-items">
+          <li class="">
+            <a href="./index.html" class="mobile-menu-text">Studio</a>
+          </li>
+          <li class="">
+            <a href="./portfolio.html" class="mobile-menu-text">Portfolio</a>
+          </li>
+          <li class="">
+            <a href="" class="mobile-menu-text">Contacts</a>
+          </li>
+        </ul>
+        <button type="button" class="mobile-menu-btn-close js-close-menu">
+          <svg width="8px" height="8px">
+            <use href="./images/icons.svg#close-x"></use>
+          </svg>
+        </button>
+        <div class="mobile-menu-info">
+          <address class="mobile-address-container">
+            <ul class="">
+              <li class="mobile-address-container-email">
+                <a href="mailto:info@devstudio.com" class=""
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="mobile-address-container-tell">
+                <a href="tel:+110001111111" class="">+11 (000) 111-11-11</a>
+              </li>
+            </ul>
+          </address>
+          <ul class="mobile-menu-social">
+            <li class="mobile-menu-social-item">
+              <a href="" class="mobile-menu-social-icon">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-social-item">
+              <a href="" class="mobile-menu-social-icon">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-social-item">
+              <a href="" class="mobile-menu-social-icon">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-social-item">
+              <a href="" class="mobile-menu-social-icon">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -125,10 +192,10 @@
           </ul>
         </div>
       </section>
-      <section class="section-list">
+      <section class="section-list-doing">
         <div class="container">
-          <h2 class="work">What are we doing</h2>
-          <ul class="list list-doing">
+          <h2 class="section-headers">What are we doing</h2>
+          <ul class="list-doing">
             <li class="work-img">
               <img
                 src="./images/imga.jpg"
@@ -156,10 +223,10 @@
           </ul>
         </div>
       </section>
-      <section class="section-list teem">
+      <section class="section-list-teem">
         <div class="container">
-          <h2 class="work work-teem">Our Team</h2>
-          <ul class="list center">
+          <h2 class="section-headers">Our Team</h2>
+          <ul class="teem-list center">
             <li class="teem-img">
               <img
                 src="./images/product-des.jpg"
@@ -173,28 +240,28 @@
                 <ul class="teem-icon">
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -215,28 +282,28 @@
                 <ul class="teem-icon">
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -257,28 +324,28 @@
                 <ul class="teem-icon">
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -299,28 +366,28 @@
                 <ul class="teem-icon">
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="teem-icon-list">
                     <a href="" class="teem-icon-link">
-                      <svg width="20" height="20">
+                      <svg width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -333,7 +400,7 @@
       </section>
       <section>
         <div class="container">
-          <h2 class="work customers-list">Customers</h2>
+          <h2 class="section-headers customers-list">Customers</h2>
           <ul class="customers-list-icon">
             <li class="customers-icon">
               <a href="" class="customers-icon-link">
@@ -372,12 +439,8 @@
             </li>
             <li class="customers-icon">
               <a href="" class="customers-icon-link">
-                <svg class="customers-icon-list">
-                  <use
-                    href="./images/icons.svg#logo-f"
-                    width="104"
-                    height="56"
-                  ></use>
+                <svg class="customers-icon-list" width="104" height="56">
+                  <use href="./images/icons.svg#logo-f"></use>
                 </svg>
               </a>
             </li>
@@ -385,49 +448,51 @@
         </div>
       </section>
     </main>
-    <footer class="layer">
-      <div class="container footer-flex">
-        <div class="logo-footer">
-          <a href="./index.html">
-            <span class="logo-a">Web<span class="logo-b">Studio</span></span>
-          </a>
-          <p class="slogan">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="social-container">
-          <h2 class="footer-social">Social media</h2>
-          <ul class="footer-icon">
-            <li class="footer-icon-list">
-              <a href="" class="footer-icon-link">
-                <svg width="24" height="24">
-                  <use href="./images/icons.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icon-list">
-              <a href="" class="footer-icon-link">
-                <svg width="24" height="24">
-                  <use href="./images/icons.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icon-list">
-              <a href="" class="footer-icon-link">
-                <svg width="24" height="24">
-                  <use href="./images/icons.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icon-list">
-              <a href="" class="footer-icon-link">
-                <svg width="24" height="24">
-                  <use href="./images/icons.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+    <footer class="layer container">
+      <div class="footer-flex">
+        <div class="footer-tablet-box">
+          <div class="logo-footer">
+            <a href="./index.html">
+              <span class="logo-a">Web<span class="logo-b">Studio</span></span>
+            </a>
+            <p class="slogan">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social-container">
+            <h2 class="footer-social">Social media</h2>
+            <ul class="footer-icon">
+              <li class="footer-icon-list">
+                <a href="" class="footer-icon-link">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-icon-list">
+                <a href="" class="footer-icon-link">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-icon-list">
+                <a href="" class="footer-icon-link">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-icon-list">
+                <a href="" class="footer-icon-link">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="footer-subscribe-box">
           <form class="footer-subscribe-items">
@@ -456,7 +521,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-btn" width="8" height="8px">
@@ -533,7 +598,9 @@
           <button class="modal-btn-submit" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
+
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
