--- a/portfolio.html
+++ b/portfolio.html
@@ -28,11 +28,11 @@
   <body>
     <header class="header-section">
       <div class="container direction">
-        <nav class="direction">
+        <nav class="direction mobile-header">
           <a href="./index.html" class="logo">
             <span class="logo-a">Web<span class="logo-b">Studio</span></span>
           </a>
-          <ul class="list direction">
+          <ul class="list header-list">
             <li class="link-direction">
               <a href="./index.html" class="link link-nav">Studio</a>
             </li>
@@ -45,9 +45,14 @@
               <a href="" class="link link-nav">Contacts</a>
             </li>
           </ul>
+          <button type="button" class="mobile-button-menu js-open-menu">
+            <svg class="menu-hamburger" width="32" height="32px">
+              <use href="./images/icons.svg#burger"></use>
+            </svg>
+          </button>
         </nav>
-        <address class="address-direction">
-          <ul class="list direction">
+        <address class="address-tablet-box">
+          <ul class="list address-direction">
             <li class="link-direction">
               <a href="mailto:info@devstudio.com" class="link"
                 >info@devstudio.com</a
@@ -58,6 +63,68 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="mobile-menu js-menu-container">
+        <ul class="mobile-menu-items">
+          <li class="">
+            <a href="./index.html" class="mobile-menu-text">Studio</a>
+          </li>
+          <li class="">
+            <a href="./portfolio.html" class="mobile-menu-text">Portfolio</a>
+          </li>
+          <li class="">
+            <a href="" class="mobile-menu-text">Contacts</a>
+          </li>
+        </ul>
+        <button type="button" class="mobile-menu-btn-close js-close-menu">
+          <svg width="8px" height="8px">
+            <use href="./images/icons.svg#close-x"></use>
+          </svg>
+        </button>
+        <div class="mobile-menu-info">
+          <address class="mobile-address-container">
+            <ul class="">
+              <li class="mobile-address-container-email">
+                <a href="mailto:info@devstudio.com" class=""
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="mobile-address-container-tell">
+                <a href="tel:+110001111111" class="">+11 (000) 111-11-11</a>
+              </li>
+            </ul>
+          </address>
+          <ul class="mobile-menu-social">
+            <li class="mobile-menu-social-item">
+              <a href="" class="mobile-menu-social-icon">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-social-item">
+              <a href="" class="mobile-menu-social-icon">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-social-item">
+              <a href="" class="mobile-menu-social-icon">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-social-item">
+              <a href="" class="mobile-menu-social-icon">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
