--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
         <div class="mobile-menu-info">
           <address class="mobile-address-container">
             <ul class="">
+              <li class="mobile-address-container-tell">
+                <a href="tel:+110001111111" class="">+11 (000) 111-11-11</a>
+              </li>
               <li class="mobile-address-container-email">
                 <a href="mailto:info@devstudio.com" class=""
                   >info@devstudio.com</a
                 >
-              </li>
-              <li class="mobile-address-container-tell">
-                <a href="tel:+110001111111" class="">+11 (000) 111-11-11</a>
               </li>
             </ul>
           </address>
@@ -198,7 +198,8 @@
           <ul class="list-doing">
             <li class="work-img">
               <img
-                src="./images/imga.jpg"
+                srcset="./images/doing/doing-1@2x.jpg 2x"
+                src="./images/doing/doing-1.jpg"
                 alt="Monitor"
                 width="360"
                 height="300"
@@ -206,7 +207,8 @@
             </li>
             <li class="work-img">
               <img
-                src="./images/imgb.jpg"
+                srcset="./images/doing/doing-2@2x.jpg 2x"
+                src="./images/doing/doing-2.jpg"
                 alt="Phone"
                 width="360"
                 height="300"
@@ -214,7 +216,8 @@
             </li>
             <li class="work-img">
               <img
-                src="./images/imgc.jpg"
+                srcset="./images/doing/doing-3@2x.jpg 2x"
+                src="./images/doing/doing-3.jpg"
                 alt="Notebook with phone"
                 width="360"
                 height="300"
@@ -229,7 +232,8 @@
           <ul class="teem-list center">
             <li class="teem-img">
               <img
-                src="./images/product-des.jpg"
+                srcset="./images/teem/mark@2x.jpg 2x"
+                src="./images/teem/mark.jpg"
                 alt="Product Designer"
                 width="264"
                 height="260"
@@ -271,7 +275,8 @@
             </li>
             <li class="teem-img">
               <img
-                src="./images/frontend-dev.jpg"
+                srcset="./images/teem/tom@2x.jpg 2x"
+                src="./images/teem/tom.jpg"
                 alt="Frontend Developer"
                 width="264"
                 height="260"
@@ -313,7 +318,8 @@
             </li>
             <li class="teem-img">
               <img
-                src="./images/marketing.jpg"
+                srcset="./images/teem/camila@2x.jpg 2x"
+                src="./images/teem/camila.jpg"
                 alt="Marketing"
                 width="264"
                 height="260"
@@ -355,7 +361,8 @@
             </li>
             <li class="teem-img">
               <img
-                src="./images/designer.jpg"
+                srcset="./images/teem/daniel@2x.jpg 2x"
+                src="./images/teem/daniel.jpg"
                 alt="UI Designer"
                 width="264"
                 height="260"
@@ -448,8 +455,8 @@
         </div>
       </section>
     </main>
-    <footer class="layer container">
-      <div class="footer-flex">
+    <footer class="layer">
+      <div class="footer-flex container">
         <div class="footer-tablet-box">
           <div class="logo-footer">
             <a href="./index.html">
@@ -521,7 +528,7 @@
       </div>
     </footer>
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-btn" width="8" height="8px">
@@ -598,7 +605,7 @@
           <button class="modal-btn-submit" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
