--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
             <a href="" class="mobile-menu-text">Contacts</a>
           </li>
         </ul>
-        <button type="button" class="mobile-menu-btn-close js-close-menu">
+        <button
+          type="button"
+          class="container mobile-menu-btn-close js-close-menu"
+        >
           <svg width="8px" height="8px">
             <use href="./images/icons.svg#close-x"></use>
           </svg>
