--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,9 @@
             <a href="./portfolio.html" class="mobile-menu-text">Portfolio</a>
           </li>
           <li class="">
-            <a href="" class="mobile-menu-text">Contacts</a>
+            <a href="" class="mobile-menu-text mobile-menu-text-active"
+              >Contacts</a
+            >
           </li>
         </ul>
         <button type="button" class="mobile-menu-btn-close js-close-menu">
