--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             <a href="./portfolio.html" class="mobile-menu-text">Portfolio</a>
           </li>
           <li class="">
-            <a href="" class="mobile-menu-text">Contacts</a>
+            <a href="" class="mobile-menu-text mobile-menu-text-active"
+              >Contacts</a
+            >
           </li>
         </ul>
         <button
